--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,7 @@ repos:
         additional_dependencies:
           - flake8-docstrings
           - flake8-sfs
-        args: [ --max-line-length=120, --extend-ignore=SFS3 D107 SFS301 D100 D104 D401 SFS101 SFS201 D412 D400 D101 D102 ]
+        args: [ --max-line-length=120, --extend-ignore=SFS3 D107 SFS301 D100 D104 D401 SFS101 SFS201 D412 D400 D101 D102 D103 ]
 
   - repo: https://github.com/PyCQA/isort
     rev: 6.0.1
