--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-aiohttp
-fastapi
-jinja2
-python-dotenv
-uvicorn[standard]
+aiohttp==3.13.*
+fastapi==0.122.*
+Jinja2==3.1.*
+pydantic==2.12.*
+pydantic-settings==2.12.*
+python-dotenv==1.2.*
+uvicorn[standard]==0.38.*
