--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,7 @@ dependencies = { file = ["requirements.txt"] }
 
 [project.optional-dependencies]
 dev = [
-    "sphinx==5.1.1",
     "pre-commit",
-    "recommonmark",
-    "gitverse"
 ]
 
 [project.scripts]
@@ -53,4 +50,4 @@ Homepage = "https://github.com/thevickypedia/PyObservability"
 Docs = "https://thevickypedia.github.io/PyObservability"
 Source = "https://github.com/thevickypedia/PyObservability"
 "Bug Tracker" = "https://github.com/thevickypedia/PyObservability/issues"
-"Release Notes" = "https://github.com/thevickypedia/PyObservability/blob/main/release_notes.rst"
+"Release Notes" = "https://github.com/thevickypedia/PyObservability/blob/main/release_notes.md"
