--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,8 +5,8 @@ ENV VERSION=${VERSION:-latest}
 ARG YQ_VERSION
 ENV YQ_VERSION=${YQ_VERSION:-v4.49.2}
 
-# Install wget and jq
-RUN apt-get update && apt-get install -y wget jq
+# Install curl and jq
+RUN apt-get update && apt-get install -y jq curl
 
 # Detect architecture and download yq, with fallback to v4.49.2 if latest fails
 RUN ARCH=$(uname -m) && \
@@ -17,7 +17,7 @@ RUN ARCH=$(uname -m) && \
         ARCH="arm64"; \
     fi && \
     echo "Downloading yq version: $YQ_VERSION for architecture: $ARCH" && \
-    wget https://github.com/mikefarah/yq/releases/download/$YQ_VERSION/yq_linux_${ARCH} -O /usr/local/bin/yq && \
+    curl -L https://github.com/mikefarah/yq/releases/download/$YQ_VERSION/yq_linux_${ARCH} -o /usr/local/bin/yq && \
     chmod +x /usr/local/bin/yq
 
 WORKDIR /app
@@ -34,7 +34,7 @@ COPY docker/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 COPY docker/healthcheck.sh /healthcheck.sh
-RUN chmod +x /entrypoint.sh
+RUN chmod +x /healthcheck.sh
 
 HEALTHCHECK --start-period=2s --interval=5s --timeout=3s \
     CMD /healthcheck.sh || exit 1
