--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 aiohttp==3.13.*
-fastapi==0.122.*
+fastapi==0.128.*
 FastAPI-UI-Auth==0.2.1
 Jinja2==3.1.*
 pydantic==2.12.*
 pydantic-settings==2.12.*
 python-dotenv==1.2.*
-uvicorn[standard]==0.38.*
+uvicorn[standard]==0.40.*
+python-socketio==5.16.*
+websocket-client==1.9.*
+requests==2.32.*
