--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.13.*
 fastapi==0.128.*
-FastAPI-UI-Auth==0.2.1
+FastAPI-UI-Auth==0.2.*
 Jinja2==3.1.*
 pydantic==2.12.*
 pydantic-settings==2.12.*
